--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -4,58 +4,48 @@
 <PageTitle>Index</PageTitle>
 
   <div class="content" align="center">
-  <h1>Pikk dáma ütés számító</h1>
-  <div class="row justify-content-sm-center">
-    <div class="col-sm-auto col-md-auto col-lg-auto">
-        <RadzenCard>
-            <h4 class="mb-2" align="left">Hónap</h4>
-            <RadzenDropDown  align="left" AllowClear="true" AllowFiltering="true" FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" @bind-Value=@selectedMonth Placeholder="Hónap" Data=@(workingDays.Select(c => c.MonthName)) Change=@(args => OnMonthChange((string)args, "Month selected"))>
-
-            </RadzenDropDown>
-            <h4 class="m3-4 mt-2" align="left">Munkanapok száma:@workingDaysInMonth</h4>
-            <h4 class="mb-3 mt-3" align="left">Szabadságos napok száma:</h4>
-            <RadzenNumeric align="left" TValue="int" Value=@holidayDays Min="0" Max=@maxHolidays Change=@(args => OnHolidayChange((int)args, "Holidays")) class="w-100" />
-            <RadzenButton class="mt-3" Click=@(args => OnClick("Success button ")) Text="Számolj" ButtonStyle="ButtonStyle.Success" />
-            <h4 class="mt-3 @hoVisible" align="left">Home office napok maximális száma:@possibleHomeofficeDays</h4>
-        </RadzenCard>
-    </div>
+      <h1>Pikk dáma ütés számító</h1>
+      <div class="row justify-content-sm-center">
+          <div class="col-sm-auto col-md-auto col-lg-auto">
+              <RadzenCard>
+                  <h4 class="mb-3 mt-3" align="left">Ütések száma:</h4>
+                  <RadzenNumeric align="left" TValue="int" Value=@utesek Min="1" Max="13" Change=@(args => OnUtesekSzama((int)args, "Ütések")) class="w-100"/>
+                  <RadzenCheckBoxList @bind-Value=@values AllowSelectAll="true" SelectAllText="Select all items" TValue="int" Orientation="Orientation.Vertical" Change="Callback">
+                      <Items>
+                          <RadzenCheckBoxListItem Text="Pikk Dáma" Value="-26" />
+                          <RadzenCheckBoxListItem Text="Kör Ász" Value="-14" />
+                          <RadzenCheckBoxListItem Text="Kör Király" Value="-13" />
+                          <RadzenCheckBoxListItem Text="Kör Dáma" Value="-12" />
+                          <RadzenCheckBoxListItem Text="Kör Bubi" Value="-11" />
+                          <RadzenCheckBoxListItem Text="Kör 10" Value="-10" />
+                          <RadzenCheckBoxListItem Text="Kör 9" Value="-9" />
+                          <RadzenCheckBoxListItem Text="Kör 8" Value="-8" />
+                          <RadzenCheckBoxListItem Text="Kör 7" Value="-7" />
+                          <RadzenCheckBoxListItem Text="Kör 6" Value="-6" />
+                          <RadzenCheckBoxListItem Text="Kör 5" Value="-5" />
+                          <RadzenCheckBoxListItem Text="Kör 4" Value="-4" />
+                          <RadzenCheckBoxListItem Text="Kör 3" Value="-3" />
+                          <RadzenCheckBoxListItem Text="Kör 2" Value="-2" />
+                      </Items>
+                  </RadzenCheckBoxList>
+                  <RadzenButton class="mt-3" Click=@(args => OnClick("Törlés button ")) Text="Törlés" ButtonStyle="ButtonStyle.Success" />
+              </RadzenCard>
+          </div>
+      </div>
   </div>
-  </div>
 
 
-<!--EventConsole @ref=@console class="mt-4" /-->
+  <EventConsole @ref=@console class="mt-4" />
 
 @code {
-
-  List<WorkingDaysInMonth> workingDays = new List<WorkingDaysInMonth>{
-    new WorkingDaysInMonth("Január", 22),
-    new WorkingDaysInMonth("Február", 21),
-    new WorkingDaysInMonth("Március", 19),
-    new WorkingDaysInMonth("Április", 21),
-    new WorkingDaysInMonth("Május",21),
-    new WorkingDaysInMonth("Június",20),
-    new WorkingDaysInMonth("Július", 23),
-    new WorkingDaysInMonth("Augusztus",21),
-    new WorkingDaysInMonth("Szeptember",21),
-    new WorkingDaysInMonth("Október", 22),
-    new WorkingDaysInMonth("November",20),
-    new WorkingDaysInMonth("December", 20)};
-
-  string? selectedMonth;
-  int workingDaysInMonth = 0;
-  int maxHolidays = 0;
-  int possibleHomeofficeDays = 0;
-  int holidayDays = 0;
-  string hoVisible = "invisible";
+    IEnumerable<int> values = new int[] { };
+    int utesek = 1;
 
   EventConsole? console;
 
   protected override void OnInitialized()
   {
-      var current = DateTime.Now.Month;
-      selectedMonth = workingDays[current-1].MonthName;
-      workingDaysInMonth = workingDays[current-1].Days;
-      maxHolidays = workingDaysInMonth;
+
   }
 
   protected override void OnAfterRender(bool firstRender)
@@ -64,70 +54,25 @@
   }
 
 
-  int CalculateHomeOfficeDays(int workDays, int holidays)
+  void OnUtesekSzama(int value, string name)
   {
-    int num = (int) Math.Round((double) (workDays - holidays) / (double) workDays * 12.0);
-    if (num < 1)
-      num = 0;
-    else if (num > 12)
-      num = 12;
-    
-    return num;
-  }
-
-
-  void OnMonthChange(string value, string name)
-  {
-      workingDaysInMonth = GetWorkingDaysInMonth(value);
-      maxHolidays = workingDaysInMonth;
-      hoVisible = GetVisible(false);
-      holidayDays = 0;
-      possibleHomeofficeDays = 0;
-      console?.Log($"{name} value changed to {value}");
-  }
-
-
-  void OnHolidayChange(int value, string name)
-  {
-      holidayDays = value;
-      hoVisible = GetVisible(false);
-      console?.Log($"{name} value changed to {value}");
+      utesek = value;
+      console?.Log($"Ütések száma:{value}");
   }
 
   void OnClick(string value)
   {
-    hoVisible = GetVisible(true);
-    possibleHomeofficeDays = CalculateHomeOfficeDays(workingDaysInMonth, holidayDays);
-
-  }
-  int GetWorkingDaysInMonth(string value)
-  {
-      var month = workingDays.FirstOrDefault(m => m.MonthName.Equals(value));
-      if (month == null) 
-      {
-        return 0;
-      }
-      return month.Days;
+      values = new int[]{};
   }
   
-  string GetVisible(bool b)
+  private void Callback(IEnumerable<int> obj)
   {
-    if (b) return "visible";
-    else return "invisible";
+      foreach (var i in obj)
+      {
+            console?.Log($"checkboxlist {i}");
+        }
   }
 
-
-  class WorkingDaysInMonth
-  {
-    public WorkingDaysInMonth(string month, int days)
-    {
-      MonthName = month;
-      Days = days;
-    }
-
-    public string MonthName {get;}
-    public int Days {get;}
-  }
 }
 
 
